Fix header: logo on mobile screen

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -123,4 +123,10 @@ header .nav__btn {
     top: 2px;
     left: 5px;
   }
+
+  .header__logo img {
+    max-width: 133px;
+    margin-left: 5px;
+    margin-top: 5px;
+  }
 }
